draft: FFM design patterns — apply full review pass
Correctness fixes: Item 3's missing errptr/NULL check, Item 6's
constructor-leak and discarded-return notes, Item 5's close-leak
permanence and TOCTOU caveats (verified against real lmdb-ffm source),
Item 12/14's ABI claim softened and tied to Item 2's canonical-layout
fix, VarHandle base-offset fix, suppressed-exception/unchecked notes.

Structural: Item 2 given a real reason to exist (size_t sizing via
canonical layouts); Item 8's trace moved to a footnote; Item 9 split,
enum/bitmask material now its own Item 10. Item 5 stays unified.

Three new items grounded in real repo code: Item 17 (native access
permissions), Item 18 (symbol lookup / native artifact loading,
contrasting zstd/lmdb vs rocksdb's loader), Item 19 (testing —
NativeObjectTest's concurrency race, round-trip tests, fault
injection).

19 items total, up from 15. TOC/headers/footnotes verified consistent.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01TcetjG4pCEA1gzttZFCeTf